* Added support for resizable dialogs. The CResizer class has been added
   to dialog.h to facilitate dialog resizing. Refer to the forms sample for
   an example of how to put CResizer to use.
* Added IPv6 support to CSocket. The network samples have been updated to
   take advantage of IPv6 support.
* Added the GDIPlus sample to demonstrate how to use the GDIplus library 
   provided with modern Windows operating systems (XP and above).      

Changes in detail
-----------------
Added CResizer
Updated CSocket to support IPv6
Added CSocket::IsIPV6Supported

Added GDIPlus sample
Updated Network samples
Update  FormDemo sample


Version 6.9
===========

New Features and Enhancements
-----------------------------
* Added a WebBrowser class called CWebBrowser.  This class provides a web 
   browser in a window. This class can be used as a view window anywhere 
   view windows are used, such as in frames, dockers, MDI Children, 
   Tabbed MDIs etc.  It has no dependance on ATL, greatly simplifying the 
   approach to adding a browser window to any application.  It can be compiled
   by any of the supported compilers including Dev-C++, MinGW and the Borland 
   compilers as well as the compilers from Microsoft.  
* Added an ActiveX host class called CAXWindow.
* The CTab, CMDITab, CDocker and CDockContainer classes are now flicker free,
   providing a more professional look during resizing and docker moving.
* Improved the dock targeting and dock hinting.   
* Introduced a new set of text conversion functions to convert between Ansi, 
   Unicode and Wide characters.
* CWnd objects can now report their type with GetWindowType.
* Modified the Browser sample to use the new CWebBrowser class. It also 
   demonstrates how to use an event sink to get notification of browser events.
* Added a Tray sample which demonstrates how to create an application 
   which can be minimised to the system tray, and restored.